--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.37",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
+    "@types/node": "^12.12.54",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-typist": "^2.0.1",
     "axios": "^0.19.2",
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-particles-js": "^3.3.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.2",
+    "react-tsparticles": "^1.17.7",
     "react-typist": "^2.0.5",
-    "typescript": "^3.7.5"
+    "tsparticles": "^1.17.7",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
