--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-typist": "^2.0.1",
+    "@types/reveal": "^3.3.33",
     "axios": "^0.19.2",
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.3.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.2",
+    "react-scripts": "^3.4.3",
+    "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.17.7",
     "react-typist": "^2.0.5",
     "tsparticles": "^1.17.7",
